# social-ai-engine

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
analytics/: __init__.py  interfaces.py
approvers/: __init__.py  interfaces.py
core/: __init__.py  interfaces.py
docs/: api-references.md  approval-workflow.md  architecture.md  content-pillars.md
generators/: __init__.py  interfaces.py
projects/_template/: brand-voice.md  config.yaml  content-plan.yaml
projects/_template/templates/: default.yaml
projects/ai_stylist/: brand-voice.md  config.yaml  content-plan.yaml
projects/ai_stylist/templates/: scorecard.yaml  style_tip.yaml  trend.yaml
projects/doctor_yulia/: brand-voice.md  config.yaml  content-plan.yaml
projects/doctor_yulia/templates/: educational.yaml  myth_bust.yaml  tip_of_day.yaml
publishers/: __init__.py  interfaces.py
scripts/: init_project.py
